--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <option value="choose">Choose Type</option>
         <option value="collections">Collections</option>
         <option value="photos">Photos</option>
-        <option value="users/harleydavidson">Users</option>
+        <option value="users">Users</option>
       </select>
       <!-- image sizes -->
       <select id="sizes" class="col-3 mr-5 mt-3 mb-3 bg-info text-light" name="sizes">
